--- a/templates/mail.j2
+++ b/templates/mail.j2
@@ -11,7 +11,7 @@ set mailserver {{ monit_mailserver_host }} port {{ monit_mailserver_port }}
 
 {% if monit_alert_addresses is defined -%}
 {% for address in monit_alert_addresses %}
-set alert {{ address }}
+set alert {{ address }} but not on { instance }
 {% endfor -%}
 {% endif -%}
 
