--- a/templates/monitrc.j2
+++ b/templates/monitrc.j2
@@ -9,4 +9,7 @@ set eventqueue
   basedir {{ monit_eventqueue_dir | default('/var/lib/monit/events') }}
   slots {{ monit_eventqueue_slots | default(100) }}
 {% endif %}
+{% if monit_mmonit is defined %}
+set mmonit {{ monit_mmonit }}
+{% endif %}
 include {{ monit_includes }}/*
